Compiler/src/main/java/Testing/Tests/LexicalTests/failing/invalidStruct2.ru
/? id de struct invalido, termina con _, salida: id invalido
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 4 | COLUMNA 7 | ERROR EN LA DEFINICION DEL IDENTIFICADOR: IDENTIFICADOR NO VALIDO Perro_
Perro_